kube/ml-usatlas-net/frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: ml-usatlas-org
  namespace: ml-usatlas-org
  labels:
    k8s-app: ml-usatlas-org
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    k8s-app: ml-usatlas-org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-usatlas-org
  namespace: ml-usatlas-org
  labels:
    k8s-app: ml-usatlas-org
  annotations:
    kubernetes.io/ingress.class: slate
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - www.atlas-ml.net
      secretName: auto-generated-ml-usatlas-org
  rules:
    - host: www.atlas-ml.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-usatlas-org
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-usatlas-org
  namespace: ml-usatlas-org
  labels:
    k8s-app: ml-usatlas-org
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ml-usatlas-org
  template:
    metadata:
      labels:
        k8s-app: ml-usatlas-org
    spec:
      containers:
        - name: ml-front
          image: sslhep/ml_front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 80
            periodSeconds: 60
            initialDelaySeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - name: globus-conf-volume
              mountPath: "/etc/globus-conf/"
            - name: mg-conf-volume
              mountPath: "/etc/mg-conf/"
            - name: frontend-conf-volume
              mountPath: "/etc/ml-front-conf/"
      volumes:
        - name: globus-conf-volume
          secret:
            secretName: globus-secret
            items:
              - key: gconf
                path: globus-config.json
        - name: frontend-conf-volume
          secret:
            secretName: config
            items:
              - key: mlconf
                path: mlfront-config.json
        - name: mg-conf-volume
          secret:
            secretName: mg-config
            items:
              - key: mgconf
                path: config.json
      serviceAccountName: ml-usatlas-org-fronter
